fixed some errors in part1

--- a/part1/Makefile
+++ b/part1/Makefile
@@ -4,6 +4,10 @@ isort: isort.o
 isort.o: isort.c
 	gcc -c -g -Wall isort.c
 	
+.PHONY: valgrind
+valgrind: isort
+	valgrind --leak-check=yes ./isort
+
 .PHONY: clean
 clean:
 	rm -f *.o isort
